--- a/elm-compiler.cabal
+++ b/elm-compiler.cabal
@@ -222,4 +222,6 @@ Test-Suite compiler-tests
         process,
         text >= 1 && < 2,
         transformers >= 0.2 && < 0.5,
-        union-find >= 0.2 && < 0.3
+        union-find >= 0.2 && < 0.3,
+        fgl >= 5.5.1.0
+
