--- a/elm-compiler.cabal
+++ b/elm-compiler.cabal
@@ -77,6 +77,7 @@ Library
         Generate.JavaScript.Variable,
         Generate.Substitute,
         Nitpick.TopLevelTypes,
+        Optimize.TailCall,
         Parse.Binop,
         Parse.Declaration,
         Parse.Expression,
