Add new data definitions in preparation for annotating the AST for tail-call elimination optimization.

--- a/elm-compiler.cabal
+++ b/elm-compiler.cabal
@@ -77,8 +77,10 @@ Library
         Generate.JavaScript.Variable,
         Generate.Substitute,
         Nitpick.TopLevelTypes,
+        Optimize.Analyze,
         Optimize.CallGraph,
         Optimize.Environment,
+        Optimize.Info,
         Parse.Binop,
         Parse.Declaration,
         Parse.Expression,
