Separate variable disambiguation (uniquifying) into a separate step during optimization.

--- a/elm-compiler.cabal
+++ b/elm-compiler.cabal
@@ -81,6 +81,7 @@ Library
         Optimize.CallGraph,
         Optimize.Environment,
         Optimize.Info,
+        Optimize.Variable,
         Parse.Binop,
         Parse.Declaration,
         Parse.Expression,
