Add test of variable uniquification (CanonicalModule -> AnalyzedModule R.Region). Check that distinct canonical vars are not assigned to the same unique id.

--- a/elm-compiler.cabal
+++ b/elm-compiler.cabal
@@ -193,6 +193,8 @@ Test-Suite compiler-tests
         Test.Property
         Test.Property.Arbitrary
         Test.Optimize.CallGraph
+        Test.Optimize.Variable
+        Test.Utils
         AST.Helpers
         AST.Literal
         Reporting.PrettyPrint
